fix: fix some styling issues, style body scrollbar
Fixed some style in the home page sections;
Added a new style to the document scrollbar.

--- a/src/pages/home/Sections/OfferedAssistance/style.css
+++ b/src/pages/home/Sections/OfferedAssistance/style.css
@@ -1,6 +1,5 @@
 [data-aos="SlideFromAbove"] {
   transform: translateY(-40%);
-  transform: translateY(-50%);
   opacity: 1;
   visibility: visible;
   transition-property: transform, opacity;
